--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -26,20 +26,21 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav pull-xs-right">
+              {{if not .Islogin}}
                 <li class="nav-item">
                     <div class="dropdown">
                       <a class="nav-link dropdown-toggle" id="accountDropdownMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="fa fa-user"></i>  </a>
                         <div class="dropdown-menu" aria-labelledby="accountDropdownMenu" style="padding:10px;right:0;left:auto;">
                           <div id="login">
-                            <form action="" method="post" accept-charset="UTF-8">
-                              <input id="loginUsername" class="form-control" style="margin-bottom: 10px;" type="text" placeholder="Username"/>
-                              <input id="loginPassword" class="form-control" style="margin-bottom: 10px;" type="password" placeholder="Password" />
-                              <div class="checkbox">
+                            <form action="/signin" method="post" accept-charset="UTF-8">
+                              <input name="loginUsername" class="form-control" style="margin-bottom: 10px;" type="text" placeholder="Username"/>
+                              <input name="loginPassword" class="form-control" style="margin-bottom: 10px;" type="password" placeholder="Password" />
+                              <!-- <div class="checkbox">
                                   <label>
                                     <input type="checkbox"> Remember me
                                   </label>
-                              </div>
+                              </div> -->
                               <input class="btn btn-primary" style="margin-bottom: 10px;clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Sign In" />
                             </form>
                             <a href="#" class="pull-xs-left"><small>Forget password?</small></a>
@@ -48,9 +49,15 @@
                         </div>
                     </div>
                 </li>
+                {{else}}
+                <li class="nav-item">
+                    <a class="nav-link" href="/signout"><i class="fa fa-sign-out"></i></a>
+                </li>
+                {{end}}
             </ul>
         </div>
     </nav>
+
     <div class="collapse" id="exCollapsingNavbar">
         <div class="container p-a-1">
             <form class="form-inline">
@@ -95,11 +102,44 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-                    <input type="submit" id="submitAdd" data-dismiss="modal" class="btn btn-primary" value="Create">
+                    <input type="submit" id="submitAccountInfo" data-dismiss="modal" class="btn btn-primary" value="Create">
                 </div>
             </div>
         </div>
     </div>
-
+    <script>
+    $(document).ready(function () {
+    $("input#submitAccountInfo").click(function () {
+      var errorMessage = '',
+          username = $('form#createaccountform input[name=createUsername]').val(),
+          password = $('form#createaccountform input[name=createPassword]').val(),
+          repeatePassword = $('form#createaccountform input[name=repeatePassword]').val();
+      if (username.length<6||username.length>12) {
+        errorMessage += " 用户名应当在[6,11]之间";
+      }
+      if (password.length<7||password.length>13){
+        errorMessage += " 密码应当在[7,12]之间"
+      }
+      if (password !== repeatePassword){
+        errorMessage += " 两次密码不一致";
+      }
+      if (errorMessage !== ''){
+        $('nav.navbar').after('<div class="alert alert-danger alert-dismissible fade in" role="alert"><button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button> <strong>注册失败!</strong>'+errorMessage+'.</div>');
+      }else{
+        $.ajax({
+            type: "POST",
+            url: "/signup",
+            data: $('form#createaccountform').serialize(),
+            success: function (msg) {
+            //  window.location.href = "/"
+            },
+            error: function () {
+                //alert("failure");
+            }
+        });
+      }
+    });
+    });
+    </script>
 </body>
 </html>
