--- a/templates/problem.tmpl
+++ b/templates/problem.tmpl
@@ -1,23 +1,27 @@
 <br>
 <div class="container">
+  {{with .Problem}}
     <h5>{{.Title}}</h5>
     <small><mark>{{.Time}}ms</mark></small>
     <small><mark> {{.Memory}}m</mark></small>
     <hr>
     <h6>Description</h6>
-    <p>{{.Description}}</p>
+    <pre>{{.Description}}</pre>
     <h6>Sample input</h6>
     <hr>
     <pre>{{.SampleInput}}</pre>
     <h6>Sample output</h6>
     <hr>
     <pre>{{.SampleOutput}}</pre>
+    {{if $.Islogin}}
     <h6>Code</h6>
     <form method="post" action="/problem/submit?id={{.ID}}">
         <textarea class="form-control" name="submitedCode" rows="3">Paste code here.</textarea>
         <br>
         <input type="submit" class="btn btn-default" value="Submit">
     </form>
+    {{end}}
     <br>
 </div>
+{{end}}
 </div>
