--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="http://ajax.useso.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="http://cdn.staticfile.org/twitter-bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
+    <link href='http://fonts.useso.com/css?family=Jura' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
@@ -19,7 +20,7 @@
                     <a class="nav-link" href="/status">Status <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contest</a>
+                    <a class="nav-link" href="/contests">Contest</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link navbar-toggle" data-toggle="collapse" data-target="#exCollapsingNavbar"><i class="fa fa-search"></i></a>
