--- a/templates/contests.tmpl
+++ b/templates/contests.tmpl
@@ -9,9 +9,62 @@
         <h4 class="list-group-item-heading">第一届西北大学程序设计竞赛 <div class="pull-right timeFont">2006-01-02 15:04:05</div></h4>
         <div class="list-group-item-text">请参赛同学互相通知，提前注册比赛，过时不候.</div>
       </a>
+      <a href="#" class="pull-right" data-toggle="modal" data-target="#editContestModal"><i class="fa fa-pencil"></i></a><br>
+      {{range .Contests}}
+      <a href="#" class="list-group-item">
+        <h4 class="list-group-item-heading">{{.ContestName}} <div class="pull-right timeFont">{{.StartTime}}</div></h4>
+        <div class="list-group-item-text">{{.ContestDescription}}</div>
+        <a href="#" class="pull-right" data-toggle="modal" data-target="#editContestModal{{.ContestID}}"><i class="fa fa-pencil"></i></a><br>
+      </a>
+      <div id="editContestModal{{.ContestID}}" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                          <span class="sr-only">Close</span>
+                      </button>
+                      <h4 class="modal-title" id="myModalLabel">Add Contest</h4>
+                  </div>
+                  <div class="modal-body">
+                      <form id="editcontestform">
+                          <label for="contestID" class="control-label">Contest ID:</label>
+                          <input type="text" name="contestID" readonly class="form-control" value="{{.ContestID}}">
+                          <label for="contestName" class="control-label">Name:</label>
+                          <input type="text" name="contestName" class="form-control" value="{{.ContestName}}">
+                          <label for="contestStartTime" class="control-label">Start time:</label>
+                          <input type="datetime-local" name="contestStartTime" class="form-control" value="{{.FormStartTime}}">
+                          <label for="contestHowlong" class="control-label">How long:</label>
+                          <select class="form-control" name="contestHowlong">
+                            <option {{if eq .HowLong 1}} selected="selected" {{end}}>1</option>
+                            <option {{if eq .HowLong 2}} selected="selected" {{end}}>2</option>
+                            <option {{if eq .HowLong 3}} selected="selected" {{end}}>3</option>
+                            <option {{if eq .HowLong 4}} selected="selected" {{end}}>4</option>
+                            <option {{if eq .HowLong 5}} selected="selected" {{end}}>5</option>
+                          </select>
+                          <label for="contestDescription" class="control-label">Contest description (less than 31 plz):</label>
+                          <input type="text" name="contestDescription" class="form-control" value="{{.ContestDescription}}">
+                          <label for="contestProblems" class="control-label" >Contest problems(输入题目ID,用空格隔开):</label>
+                          <input type="text" name="contestProblems" class="form-control" value="{{.FormContestProblems}}">
+                      </form>
+                  </div>
+                  <div class="modal-footer">
+                      <button class="btn btn-default" data-dismiss="modal">Cancel</button>
+                      <input type="submit" id="submitRemoveContest" data-dismiss="modal" class="btn btn-danger" value="Remove Contest">
+                      <input type="submit" id="submitUpdateContest" data-dismiss="modal" class="btn btn-primary" value="Update Contest">
+                  </div>
+              </div>
+          </div>
+      </div>
+      {{end}}
     </div>
+    <nav>
+      <ul class="pager">
+        <li class="pager-prev {{if not .CanPrevious}}disabled{{end}}"><a href="/status?page={{.PreviousPage}}">Previous</a></li>
+        <li class="pager-next {{if not .CanNext}}disabled{{end}}"><a href="/status?page={{.NextPage}}">Next</a></li>
+      </ul>
+    </nav>
 </div>
-
 <div id="addContestModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -44,7 +97,7 @@
             </div>
             <div class="modal-footer">
                 <button class="btn btn-default" data-dismiss="modal">Cancel</button>
-                <input type="submit" id="submitAdd" data-dismiss="modal" class="btn btn-primary" value="Save Contest">
+                <input type="submit" id="submitAddContest" data-dismiss="modal" class="btn btn-primary" value="Save Contest">
             </div>
         </div>
     </div>
@@ -52,13 +105,43 @@
 
 <script>
     $(document).ready(function () {
-    $("input#submitAdd").click(function () {
+    $("input#submitAddContest").click(function () {
       // alert($('form#addcontestform input[name=contestStartTime]').val())
       // alert($('form#addcontestform select[name=contestHowlong]').val())
         $.ajax({
             type: "POST",
             url: "/contest/add",
             data: $('form#addcontestform').serialize(),
+            success: function (msg) {
+              window.location.href = "/contests"
+            },
+            error: function () {
+                //alert("failure");
+            }
+        });
+    });
+    $("input#submitUpdateContest").click(function () {
+      // alert($('form#addcontestform input[name=contestStartTime]').val())
+      // alert($('form#addcontestform select[name=contestHowlong]').val())
+        $.ajax({
+            type: "POST",
+            url: "/contest/update",
+            data: $('form#editcontestform').serialize(),
+            success: function (msg) {
+              window.location.href = "/contests"
+            },
+            error: function () {
+                //alert("failure");
+            }
+        });
+    });
+    $("input#submitRemoveContest").click(function () {
+      // alert($('form#addcontestform input[name=contestStartTime]').val())
+      // alert($('form#addcontestform select[name=contestHowlong]').val())
+        $.ajax({
+            type: "POST",
+            url: "/contest/remove",
+            data: $('form#editcontestform').serialize(),
             success: function (msg) {
               window.location.href = "/contests"
             },
