--- a/templates/contest.tmpl
+++ b/templates/contest.tmpl
@@ -2,13 +2,13 @@
 <div class="container">
   <ul class="nav nav-inline">
     <li class="nav-item">
-      <a class="nav-link" href="#">Problems</a>
+      <a class="nav-link" href="/contest?cid={{.ContestID}}">Problems</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Status</a>
+      <a class="nav-link" href="/contest/status?cid={{.ContestID}}">Status</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Board</a>
+      <a class="nav-link" href="/contest/board?cid={{.ContestID}}">Board</a>
     </li>
   </ul>
   <hr>
