--- a/templates/contestProblem.tmpl
+++ b/templates/contestProblem.tmpl
@@ -2,13 +2,13 @@
 <div class="container">
   <ul class="nav nav-inline">
     <li class="nav-item">
-      <a class="nav-link" href="#">Problems</a>
+      <a class="nav-link" href="/contest?cid={{.ContestID}}">Problems</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Status</a>
+      <a class="nav-link" href="/contset/status?cid={{.ContestID}}">Status</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Board</a>
+      <a class="nav-link" href="/contest/board?cid={{.ContestID}}">Board</a>
     </li>
   </ul>
   <hr>
@@ -28,7 +28,7 @@
     <pre>{{.SampleOutput}}</pre>
     {{if $.Islogin}}
     <h6>Code</h6>
-    <form method="post" action="/problem/submit?id={{.ID}}">
+    <form method="post" action="/contest/problems/submit?cid={{$.ContestID}}&&pid={{$.ContestProblemID}}">
         <textarea class="form-control" name="submitedCode" rows="3">Paste code here.</textarea>
         <br>
         <input type="submit" class="btn btn-default" value="Submit">
