--- a/templates/contestProblem.tmpl
+++ b/templates/contestProblem.tmpl
@@ -5,7 +5,7 @@
       <a class="nav-link" href="/contest?cid={{.ContestID}}">Problems</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="/contset/status?cid={{.ContestID}}">Status</a>
+      <a class="nav-link" href="/contest/status?cid={{.ContestID}}">Status</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="/contest/board?cid={{.ContestID}}">Board</a>
