--- a/templates/problem.tmpl
+++ b/templates/problem.tmpl
@@ -2,7 +2,7 @@
 <div class="container">
   {{with .Problem}}
     <h5>{{.Title}}</h5>
-    <small><mark>{{.Time}}ms</mark></small>
+    <small><mark>{{.Time}}m</mark></small>
     <small><mark> {{.Memory}}m</mark></small>
     <hr>
     <h6>Description</h6>
