--- a/templates/problem.tmpl
+++ b/templates/problem.tmpl
@@ -2,7 +2,7 @@
 <div class="container">
   {{with .Problem}}
     <h5>{{.Title}}</h5>
-    <small><mark>{{.Time}}m</mark></small>
+    <small><mark>{{.Time}}sec</mark></small>
     <small><mark> {{.Memory}}m</mark></small>
     <hr>
     <h6>Description</h6>
@@ -14,11 +14,18 @@
     <hr>
     <pre>{{.SampleOutput}}</pre>
     {{if $.Islogin}}
-    <h6>Code</h6>
     <form method="post" action="/problem/submit?id={{.ID}}">
-        <textarea class="form-control" name="submitedCode" rows="3">Paste code here.</textarea>
-        <br>
-        <input type="submit" class="btn btn-default" value="Submit">
+      <h6>Code &nbsp;
+      <select class="c-select" name="lang">
+        <option selected>C++</option>
+        <option>C</option>
+        <option>Java</option>
+        <option>Python</option>
+      </select>
+      </h6>
+      <textarea class="form-control" name="submitedCode" rows="3">Paste code here.</textarea>
+      <br>
+      <input type="submit" class="btn btn-default" value="Submit">
     </form>
     {{end}}
     <br>
