--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -132,7 +132,7 @@
             url: "/signup",
             data: $('form#createaccountform').serialize(),
             success: function (msg) {
-            //  window.location.href = "/"
+              window.location.href = "/"
             },
             error: function () {
                 //alert("failure");
