--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -110,7 +110,7 @@
     <nav>
         <ul class="pagination">
             <li class="page-item {{if not .CanPrevious}}disabled{{end}}">
-                <a class="page-link" href="/problem?page={{.PreviousPage}}" aria-label="Previous">
+                <a class="page-link" href="{{if .CanPrevious}}/problem?page={{.PreviousPage}}{{end}}" aria-label="Previous">
                     <span aria-hidden="true">&laquo;</span>
                     <span class="sr-only">Previous</span>
                 </a>
@@ -119,7 +119,7 @@
               <li class="page-item {{if eq $.CurrentPage .}}active{{end}}"><a class="page-link" href="/problems?page={{.}}">{{.}}</a></li>
             {{end}}
             <li class="page-item {{if not .CanNext}}disabled{{end}} ">
-                <a class="page-link" href="/problem?page={{.NextPage}}" aria-label="Next">
+                <a class="page-link" href="{{if .CanNext}}/problem?page={{.NextPage}}{{end}}" aria-label="Next">
                     <span aria-hidden="true">&raquo;</span>
                     <span class="sr-only">Next</span>
                 </a>
