--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,5 +1,5 @@
 {{if .HaveInfo}}
-<div class="alert alert-danger alert-dismissible fade in" role="alert">
+<div class="alert alert-{{if .GoodInfo}}success{{else}}danger{{end}} alert-dismissible fade in" role="alert">
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
@@ -29,6 +29,7 @@
                 <small class="comment-phrase"> #{{.ID}} {{.AcRate}}%({{.Ac}}/{{.Total}})</small>
             </li>
             {{end}}
+            {{if $.Isadmin}}
             <div id="editModal{{.ID}}" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
@@ -82,7 +83,7 @@
                         url: "/problem/update",
                         data: $('form#editproblemform{{.ID}}').serialize(),
                         success: function (msg) {
-                          window.location.href = "/"
+                          window.location.assign("/")
                         },
                         error: function () {
                             //alert("failure");
@@ -95,7 +96,7 @@
                         url: "/problem/remove",
                         data: $('form#editproblemform{{.ID}}').serialize(),
                         success: function (msg) {
-                          window.location.href = "/"
+                          window.location.assign("/")
                         },
                         error: function () {
                             //alert("failure");
@@ -104,6 +105,7 @@
                 });
             });
             </script>
+            {{end}}
             {{end}}
         </ul>
     </div>
@@ -176,7 +178,7 @@
             url: "/problem/add",
             data: $('form#addproblemform').serialize(),
             success: function (msg) {
-              window.location.href = "/contest"
+              window.location.assign("/")
             },
             error: function () {
                 //alert("failure");
