--- a/templates/status.tmpl
+++ b/templates/status.tmpl
@@ -14,6 +14,7 @@
   </thead>
   <tbody>
     {{range .Status}}
+    {{if myor $.Isadmin .Display}}
     <tr>
       <th scope="row">{{.User}}</th>
       <td>{{.ID}}</td>
@@ -23,6 +24,7 @@
       <td>{{.Lang}}</td>
       <td>{{.SubmitTime}}</td>
     </tr>
+    {{end}}
     {{end}}
   </tbody>
 </table>
