--- a/templates/contestProblem.tmpl
+++ b/templates/contestProblem.tmpl
@@ -15,8 +15,8 @@
 
   {{with .Problem}}
     <h5>{{.Title}}</h5>
-    <small><mark>{{.Time}}m</mark></small>
-    <small><mark> {{.Memory}}m</mark></small>
+    <small><mark>{{.Time}}sec</mark></small>
+    <small><mark> {{.Memory}}mb</mark></small>
     <hr>
     <h6>Description</h6>
     <pre>{{.Description}}</pre>
