--- a/templates/problem.tmpl
+++ b/templates/problem.tmpl
@@ -3,7 +3,7 @@
   {{with .Problem}}
     <h5>{{.Title}}</h5>
     <small><mark>{{.Time}}sec</mark></small>
-    <small><mark> {{.Memory}}m</mark></small>
+    <small><mark> {{.Memory}}mb</mark></small>
     <hr>
     <h6>Description</h6>
     <pre>{{.Description}}</pre>
