--- a/templates/layout.tmpl
+++ b/templates/layout.tmpl
@@ -6,9 +6,9 @@
     <link href="http://cdn.staticfile.org/twitter-bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="/public/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <script src="http://ajax.useso.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="http://cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
     <script src="http://cdn.staticfile.org/twitter-bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"></script>
-    <link href='http://fonts.useso.com/css?family=Jura' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.css.network/css?family=Jura' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
